@@ -23,9 +23,11 @@ import java.net.MalformedURLException;
 import java.net.ProtocolException;
 import java.net.SocketException;
 import java.net.SocketTimeoutException;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.UnknownHostException;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -749,8 +751,8 @@ public abstract class JavaElement extends PlatformObject implements IJavaElement
 			if (IClasspathAttribute.JAVADOC_LOCATION_ATTRIBUTE_NAME.equals(attrib.getName())) {
 				String value = attrib.getValue();
 				try {
-					return new URL(value);
-				} catch (MalformedURLException e) {
+					return (new URI(value)).toURL();
+				} catch (IllegalArgumentException | MalformedURLException | URISyntaxException e) {
 					throw new JavaModelException(new JavaModelStatus(IJavaModelStatusConstants.CANNOT_RETRIEVE_ATTACHED_JAVADOC, value));
 				}
 			}
@@ -819,12 +821,12 @@ public abstract class JavaElement extends PlatformObject implements IJavaElement
 	protected String getURLContents(URL baseLoc, String docUrlValue) throws JavaModelException {
 		InputStream stream = null;
 		JarURLConnection connection2 = null;
-		URL docUrl = null;
+		URI docUri = null;
 		URLConnection connection = null;
 		try {
 			redirect: for (int i= 0; i < 5; i++) { // avoid endless redirects...
-				docUrl = new URL(docUrlValue);
-				connection = docUrl.openConnection();
+				docUri = new URI(docUrlValue);
+				connection = docUri.toURL().openConnection();
 
 				int timeoutVal = 10000;
 				connection.setConnectTimeout(timeoutVal);
